--- a/public/templates/test-pins.html
+++ b/public/templates/test-pins.html
@@ -2,58 +2,58 @@
 <html>
 <head>
     <title>Test pins</title>
-    {% include "rascal-head.html" %}
+    {% include "include/rascal-head.html" %}
 </head>
 <body>
-    {% include "rascal-topbar.html" %}
+    {% include "include/rascal-topbar.html" %}
     <div class="container">
         <div class="well rascal">
             <h1>Test some pins.</h1>
             <ul>
-                <li>LED: <input id="LED" type="button" value="ON" class="btn btn-large btn-danger rascal" alt="ON">
-                    <input id="LED" type="button" value="OFF" class="btn btn-large btn-danger rascal" alt="OFF"></li>
+                <li>LED: <input id="LED" type="button" value="ON" class="btn btn-danger rascal" alt="ON">
+                    <input id="LED" type="button" value="OFF" class="btn btn-danger rascal" alt="OFF"></li>
                 
-                <li>PIN 0: <input id="0" type="button" value="ON" class="btn btn-large btn-danger rascal" alt="ON">
-                    <input id="0" type="button" value="OFF" class="btn btn-large btn-danger rascal" alt="OFF"></li>
+                <li>PIN 0: <input id="0" type="button" value="ON" class="btn btn-danger rascal" alt="ON">
+                    <input id="0" type="button" value="OFF" class="btn btn-danger rascal" alt="OFF"></li>
                 
-                <li>PIN 1: <input id="1" type="button" value="ON" class="btn btn-large btn-danger rascal" alt="ON">
-                    <input id="1" type="button" value="OFF" class="btn btn-large btn-danger rascal" alt="OFF"></li>
+                <li>PIN 1: <input id="1" type="button" value="ON" class="btn btn-danger rascal" alt="ON">
+                    <input id="1" type="button" value="OFF" class="btn btn-danger rascal" alt="OFF"></li>
                 
-                <li>PIN 2: <input id="2" type="button" value="ON" class="btn btn-large btn-danger rascal" alt="ON">
-                    <input id="2" type="button" value="OFF" class="btn btn-large btn-danger rascal" alt="OFF"></li>
+                <li>PIN 2: <input id="2" type="button" value="ON" class="btn btn-danger rascal" alt="ON">
+                    <input id="2" type="button" value="OFF" class="btn btn-danger rascal" alt="OFF"></li>
                 
-                <li>PIN 3: <input id="3" type="button" value="ON" class="btn btn-large btn-danger rascal" alt="ON">
-                    <input id="3" type="button" value="OFF" class="btn btn-large btn-danger rascal" alt="OFF"></li>
+                <li>PIN 3: <input id="3" type="button" value="ON" class="btn btn-danger rascal" alt="ON">
+                    <input id="3" type="button" value="OFF" class="btn btn-danger rascal" alt="OFF"></li>
                 
-                <li>PIN 4: <input id="4" type="button" value="ON" class="btn btn-large btn-danger rascal" alt="ON">
-                    <input id="4" type="button" value="OFF" class="btn btn-large btn-danger rascal" alt="OFF"></li>
+                <li>PIN 4: <input id="4" type="button" value="ON" class="btn btn-danger rascal" alt="ON">
+                    <input id="4" type="button" value="OFF" class="btn btn-danger rascal" alt="OFF"></li>
                 
-                <li>PIN 5: <input id="5" type="button" value="ON" class="btn btn-large btn-danger rascal" alt="ON">
-                    <input id="5" type="button" value="OFF" class="btn btn-large btn-danger rascal" alt="OFF"></li>
+                <li>PIN 5: <input id="5" type="button" value="ON" class="btn btn-danger rascal" alt="ON">
+                    <input id="5" type="button" value="OFF" class="btn btn-danger rascal" alt="OFF"></li>
                 
-                <li>PIN 6: <input id="6" type="button" value="ON" class="btn btn-large btn-danger rascal" alt="ON">
-                    <input id="6" type="button" value="OFF" class="btn btn-large btn-danger rascal" alt="OFF"></li>
+                <li>PIN 6: <input id="6" type="button" value="ON" class="btn btn-danger rascal" alt="ON">
+                    <input id="6" type="button" value="OFF" class="btn btn-danger rascal" alt="OFF"></li>
                 
-                <li>PIN 7: <input id="7" type="button" value="ON" class="btn btn-large btn-danger rascal" alt="ON">
-                    <input id="7" type="button" value="OFF" class="btn btn-large btn-danger rascal" alt="OFF"></li>
+                <li>PIN 7: <input id="7" type="button" value="ON" class="btn btn-danger rascal" alt="ON">
+                    <input id="7" type="button" value="OFF" class="btn btn-danger rascal" alt="OFF"></li>
                 
-                <li>PIN 8: <input id="8" type="button" value="ON" class="btn btn-large btn-danger rascal" alt="ON">
-                    <input id="8" type="button" value="OFF" class="btn btn-large btn-danger rascal" alt="OFF"></li>
+                <li>PIN 8: <input id="8" type="button" value="ON" class="btn btn-danger rascal" alt="ON">
+                    <input id="8" type="button" value="OFF" class="btn btn-danger rascal" alt="OFF"></li>
                 
-                <li>PIN 9: <input id="9" type="button" value="ON" class="btn btn-large btn-danger rascal" alt="ON">
-                    <input id="9" type="button" value="OFF" class="btn btn-large btn-danger rascal" alt="OFF"></li>
+                <li>PIN 9: <input id="9" type="button" value="ON" class="btn btn-danger rascal" alt="ON">
+                    <input id="9" type="button" value="OFF" class="btn btn-danger rascal" alt="OFF"></li>
                 
-                <li>PIN 10: <input id="10" type="button" value="ON" class="btn btn-large btn-danger rascal" alt="ON">
-                    <input id="10" type="button" value="OFF" class="btn btn-large btn-danger rascal" alt="OFF"></li>
+                <li>PIN 10: <input id="10" type="button" value="ON" class="btn btn-danger rascal" alt="ON">
+                    <input id="10" type="button" value="OFF" class="btn btn-danger rascal" alt="OFF"></li>
                 
-                <li>PIN 11: <input id="11" type="button" value="ON" class="btn btn-large btn-danger rascal" alt="ON">
-                    <input id="11" type="button" value="OFF" class="btn btn-large btn-danger rascal" alt="OFF"></li>
+                <li>PIN 11: <input id="11" type="button" value="ON" class="btn btn-danger rascal" alt="ON">
+                    <input id="11" type="button" value="OFF" class="btn btn-danger rascal" alt="OFF"></li>
                 
-                <li>PIN 12: <input id="12" type="button" value="ON" class="btn btn-large btn-danger rascal" alt="ON">
-                    <input id="12" type="button" value="OFF" class="btn btn-large btn-danger rascal" alt="OFF"></li>
+                <li>PIN 12: <input id="12" type="button" value="ON" class="btn btn-danger rascal" alt="ON">
+                    <input id="12" type="button" value="OFF" class="btn btn-danger rascal" alt="OFF"></li>
                 
-                <li>PIN 13: <input id="13" type="button" value="ON" class="btn btn-large btn-danger rascal" alt="ON">
-                    <input id="13" type="button" value="OFF" class="btn btn-large btn-danger rascal" alt="OFF"></li>
+                <li>PIN 13: <input id="13" type="button" value="ON" class="btn btn-danger rascal" alt="ON">
+                    <input id="13" type="button" value="OFF" class="btn btn-danger rascal" alt="OFF"></li>
             </ul>
         </div>
     </div>
