Interim changes for Anthrax-RC2 (do not pull)

--- a/editor/templates/editor-cm.html
+++ b/editor/templates/editor-cm.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="/editor/static/codemirror2/theme/neat.css">
     <link rel="stylesheet" type="text/css" href="/editor/static/codemirror2/theme/night.css">
     <link rel="stylesheet" type="text/css" href="/editor/static/codemirror2/theme/rubyblue.css">
+    <link rel="stylesheet" type="text/css" href="/editor/static/codemirror2/theme/vibrant-ink.css">
     <link rel="stylesheet" type="text/css" href="/editor/static/codemirror2/theme/xq-dark.css">
 
     <link rel="stylesheet/less" type="text/css" href="/editor/static/css/solarized-light-cm.less">
@@ -234,6 +235,7 @@
                                 <option>rubyblue</option>
                                 <option>solarized-light</option>
                                 <option>solarized-dark</option>
+                                <option>vibrant-ink</option>
                                 <option>xq-dark</option>
                             </select>
                         </div> <!-- controls -->
