--- a/public/templates/upload.html
+++ b/public/templates/upload.html
@@ -47,10 +47,10 @@
         <div class="container">
             <div class="row">
                 <div class="span6">
-                    <p>Footer Stop Press</p>
+                    <p>Left footer</p>
                 </div>
                 <div class="span6">
-                    <p>England 1-0 Ukraine</p>
+                    <p style="float: right">Right footer</p>
                 </div>
             </div>
         </div>
