Improve email.html cosmetics, move config from server.py to smtp_lib.py

--- a/public/static/css/email.css
+++ b/public/static/css/email.css
@@ -1,4 +1,11 @@
-/* .email-input { */
+.msgbox {
+    padding: 10px 0 15px;
+}
+
+.address-input {
+     line-height: 0.8em;
+}
+
 #sender, #recipients, #subject {
     border: 2px solid #E7E8E9;
     color: #FFFFFF;
@@ -7,7 +14,7 @@
     font-family:'Courier', sans-serif;
     font-size: 1em;
     margin-top: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
 
 .email-body {
@@ -18,5 +25,5 @@
     font-family: 'Courier', sans-serif;
     font-size: 1.25em;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
