--- a/public/templates/ck.html
+++ b/public/templates/ck.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
-    <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
-    <link rel="shortcut icon" href="/static/images/favicon.ico">
-    <script src="/static/js/jquery-1.7.2.js"></script>
-    <link rel="stylesheet" href="/static/css/mlColorPicker.css" type="text/css" />
-    <script type="text/javascript" src="/static/js/mlColorPicker.js"></script>
+    <title>Color Kinetics Demo</title>
+    {% include "include/rascal-head.html" %}
+    <link rel="stylesheet" href="static/css/mlColorPicker.css" type="text/css" />
+    <script type="text/javascript" src="static/js/mlColorPicker.js"></script>
 </head>
 <body>
-    <div class="rascalcontent">
-        <h1>Color Kinetics demo</h1>
-        <div id="colorPicker2"style="padding:10px;clear:both;vertical-align:middle;">
-	    <span id="colorPicker2Span" style="float:left; border:1px solid black; width:100px; height:100px;margin:5px;"></span>
-            <span id="text2" style="">Click anywhere in the box.</span>			
+    {% include "include/rascal-topbar.html" %}
+    <div class="container">
+        <div class="well rascal">
+            <h1>Color Kinetics demo</h1>
+            <div id="colorPicker2"style="padding:10px;clear:both;vertical-align:middle;">
+                <span id="colorPicker2Span" style="float:left; border:1px solid black; width:100px; height:100px;margin:5px;"></span>
+                <span id="text2" style="">Click anywhere in the box.</span>
+            </div>
         </div>
     </div>
-	<script type="text/javascript">
-	$(function(){
+    
+    <script type="text/javascript">
+        $(function(){
             $("#colorPicker2").mlColorPicker({'onChange': function(val){
                 $("#colorPicker2Span").css("background-color", "#" + val);
                 $("#text2").text("#" + val);
                 $.post("set-color", "color=" + val);
             }});
-	});
-	</script>
+        });
+    </script>
 </body>
 </html>
