--- a/public/templates/motor.html
+++ b/public/templates/motor.html
@@ -1,33 +1,30 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
-    <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
-    <link rel="shortcut icon" href="/static/images/favicon.ico">
-    <!--[if IE]><script language="javascript" type="text/javascript" src="/excanvas.js"></script><![endif]-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript"></script>
+    <title>Motor control demo</title>
+    {% include "include/rascal-head.html" %}
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" type="text/css" media="all" />
     <link rel="stylesheet" href="http://static.jquery.com/ui/css/demo-docs-theme/ui.theme.css" type="text/css" media="all" />
 </head>
 <body>
-    <div class="rascalcontent">
-        <h1>Motor control demo</h1>
-
+    {% include "include/rascal-topbar.html" %}
+    <div class="container">
+        <div class="well rascal">
+            <h1>Motor control demo</h1>
+            <p>&nbsp;</p>
             <div id="slider"></div>
-
+        </div>
     </div>
+
     <script language="javascript" type="text/javascript">
-    $(function() {
-        $( "#slider" ).slider({ min: 0, max: 255 });
-    });
-    $( "#slider" ).bind( "slidestop", function(event, ui) {
-        var value = $( "#slider" ).slider( "option", "value" );
-        $.post("/set-speed", { speed: value });
-    });
+        $(function() {
+            $( "#slider" ).slider({ min: 0, max: 255 });
+        });
+        $( "#slider" ).bind( "slidestop", function(event, ui) {
+            var value = $( "#slider" ).slider( "option", "value" );
+            $.post("/set-speed", { speed: value });
+        });
     </script>
 </body>
 </html>
